package com.hotel.booking.service;

import com.hotel.grpc.discount.*;
import io.github.resilience4j.circuitbreaker.annotation.CircuitBreaker;
import net.devh.boot.grpc.client.inject.GrpcClient;
import org.slf4j.Logger;
import org.slf4j.LoggerFactory;
import org.springframework.stereotype.Service;

import java.util.Collections;
import java.util.concurrent.TimeUnit;

/**
 * ‚úÖ –ö–õ–ò–ï–ù–¢–°–ö–ê–Ø –æ–±—ë—Ä—Ç–∫–∞ –¥–ª—è gRPC –≤—ã–∑–æ–≤–æ–≤ —Å Circuit Breaker
 * –°–æ–∑–¥–∞—ë–º –≤ booking-orchestrator-service
 */
@Service
public class DiscountClientService {

    private static final Logger log = LoggerFactory.getLogger(DiscountClientService.class);
    private static final long GRPC_DEADLINE_SECONDS = 5;

    @GrpcClient("discount-service")
    private DiscountServiceGrpc.DiscountServiceBlockingStub discountServiceStub;

    @CircuitBreaker(name = "discount-service", fallbackMethod = "calculateDiscountFallback")
    public DiscountResponse calculateDiscount(DiscountRequest request) {
        log.debug("üîÑ gRPC –≤—ã–∑–æ–≤ calculateDiscount –¥–ª—è booking: {}", request.getBookingId());

        return discountServiceStub
                .withDeadlineAfter(GRPC_DEADLINE_SECONDS, TimeUnit.SECONDS)
                .calculateDiscount(request);
    }

    private DiscountResponse calculateDiscountFallback(DiscountRequest request, Exception ex) {
        log.warn("üîÑ Circuit Breaker FALLBACK –¥–ª—è booking: {}. –ü—Ä–∏—á–∏–Ω–∞: {}",
                request.getBookingId(), ex.getMessage());

        return DiscountResponse.newBuilder()
                .setBookingId(request.getBookingId())
                .setDiscountPercentage(0.0)
                .setFinalPrice(request.getBasePrice())
                .setDiscountReason("–°–µ—Ä–≤–∏—Å —Å–∫–∏–¥–æ–∫ –≤—Ä–µ–º–µ–Ω–Ω–æ –Ω–µ–¥–æ—Å—Ç—É–ø–µ–Ω")
                .setApplied(false)
                .build();
    }

    @CircuitBreaker(name = "discount-service", fallbackMethod = "getRecommendationsFallback")
    public RecommendationResponse getRecommendations(RecommendationRequest request) {
        log.debug("üîÑ gRPC –≤—ã–∑–æ–≤ getRecommendations –¥–ª—è user: {}", request.getUserId());

        return discountServiceStub
                .withDeadlineAfter(GRPC_DEADLINE_SECONDS, TimeUnit.SECONDS)
                .getRecommendations(request);
    }

    private RecommendationResponse getRecommendationsFallback(RecommendationRequest request, Exception ex) {
        log.warn("üîÑ Recommendations FALLBACK –¥–ª—è user: {}", request.getUserId());

        return RecommendationResponse.newBuilder()
                .addAllRecommendedHotelIds(Collections.emptyList())
                .setMessage("–†–µ–∫–æ–º–µ–Ω–¥–∞—Ü–∏–∏ –≤—Ä–µ–º–µ–Ω–Ω–æ –Ω–µ–¥–æ—Å—Ç—É–ø–Ω—ã")
                .build();
    }
}
